[project]
name = "data-structure-deeper"
version = "0.1.0"
description = "In this project I'm going to understand: what is data structure? and how it help me?"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest-html>=4.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
plugins = []
